--- a/templates/Login.html
+++ b/templates/Login.html
@@ -432,7 +432,7 @@
                 .then(response => response.json())
                 .then(data => {
                     if (data.success) {
-                        window.location.href = data.redirect || '/dashboard';
+                        window.location.href = data.redirect || '/';
                     } else {
                         alert('Authentication failed: ' + data.error);
                         hideLoading();
