--- a/templates/header.html
+++ b/templates/header.html
@@ -34,7 +34,7 @@
               </a>
 
               {% if session.user.is_admin %}
-                  <a href="{{ url_for('dashboard') }}" class="dropdown-item">
+                  <a href="{{ url_for('admin.products') }}" class="dropdown-item">
                     <i class="fas fa-tachometer-alt"></i> Admin Dashboard
                   </a>
               {% else %}
