--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -441,10 +441,13 @@
                 <!-- Product Actions -->
                 <div class="product-actions">
                     {% if product.stock > 0 %}
-                        <button class="btn btn-success" onclick="addToCart()">
-                            <i class="fas fa-shopping-cart"></i>
-                            Add to Cart
-                        </button>
+                        <form action="{{ url_for('cart.add_to_cart', product_id=product.id) }}" method="post" style="display:inline;">
+                            <input type="hidden" name="quantity" value="1">
+                            <button type="submit" class="btn btn-success">
+                                <i class="fas fa-shopping-cart"></i>
+                                Add to Cart
+                            </button>
+                        </form>
                         <button class="btn btn-primary" onclick="buyNow()">
                             <i class="fas fa-bolt"></i>
                             Buy Now
@@ -487,10 +490,12 @@
                                         <i class="fas fa-eye"></i> View
                                     </a>
                                     {% if related_product.stock > 0 %}
-                                        <a href="{{ url_for('add_to_cart', product_id=related_product.id) if url_for('add_to_cart', product_id=related_product.id) else '#' }}"
-                                           class="btn btn-success btn-small">
-                                            <i class="fas fa-cart-plus"></i> Add
-                                        </a>
+                                        <form action="{{ url_for('cart.add_to_cart', product_id=related_product.id) }}" method="post" style="display:inline;">
+                                            <input type="hidden" name="quantity" value="1">
+                                            <button type="submit" class="btn btn-success btn-small">
+                                                <i class="fas fa-cart-plus"></i> Add
+                                            </button>
+                                        </form>
                                     {% else %}
                                         <button class="btn btn-secondary btn-small" disabled>
                                             <i class="fas fa-ban"></i> Out
